vlib/v/checker/tests/index_operator_assignment_without_setter_err.vv
struct Numbers {}

fn (n Numbers) [] (index int) int {
	return index
}

fn main() {
	mut numbers := Numbers{}
	numbers[0] = 1
}
